syntax = "proto3";
package svcs;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

// For tests
option (gogoproto.testgen_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;

service HealthCheck {
  rpc PingPong (PingPongReq) returns (PingPongRes) {}
}

message PingPongReq {
  string msg = 1;
}

message PingPongRes {
  string msg = 1;
}
